Migration to ESM module syntax

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@ghasemkiani/word-maker",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "Microsoft Word HTML maker utility",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,6 +26,6 @@
   "dependencies": {
     "@ghasemkiani/base": "github:ghasemkiani/base",
     "@ghasemkiani/htmlmaker": "gitlab:ghasemkiani/htmlmaker",
-    "@ghasemkiani/htmlmaker": "gitlab:ghasemkiani/wjsdom"
+    "@ghasemkiani/htmlmaker": "github:ghasemkiani/wjsdom"
   }
 }
